ObjectOrientedScripting/Compiler/OOS/Parser.cs
using Compiler.OOS_LanguageObjects;
using System.Collections.Generic;
using System.IO;
using System.Linq;
using System.Text;
using System.Threading.Tasks;



using System;



public class Parser {
	public const int _EOF = 0;
	public const int _T_SCALAR = 1;
	public const int _T_STRING = 2;
	public const int _T_IDENT = 3;
	public const int _T_TERMINATOR = 4;
	public const int _T_EXPOP1 = 5;
	public const int _T_EXPOP2 = 6;
	public const int _T_EXPOP3 = 7;
	public const int _T_OTHEROP = 8;
	public const int _T_ASSIGNMENTCHAR = 9;
	public const int _T_EXTENDEDASSIGNMENTCHARS = 10;
	public const int _T_FASTASSIGNMENTCHARS = 11;
	public const int _T_ROUNDBRACKETOPEN = 12;
	public const int _T_ROUNDBRACKETCLOSE = 13;
	public const int _T_SQUAREBRACKETOPEN = 14;
	public const int _T_SQUAREBRACKETCLOSE = 15;
	public const int _T_CODEBRACKETOPEN = 16;
	public const int _T_CODEBRACKETCLOSE = 17;
	public const int _T_INSTANCEACCESS = 18;
	public const int _T_NAMESPACEACCESS = 19;
	public const int _T_COMMA = 20;
	public const int _T_TEMPLATEOPEN = 21;
	public const int _T_TEMPLATECLOSE = 22;
	public const int _T_SLASH = 23;
	public const int _T_BACKSLASH = 24;
	public const int maxT = 92;

	const bool _T = true;
	const bool _x = false;
	const int minErrDist = 2;
	
	public Scanner scanner;
    public string file;
	public Errors  errors;

	public Token t;    // last recognized token
	public Token la;   // lookahead token
	int errDist = minErrDist;



	public Base BaseObject { get; set;}
	
	public Parser(Scanner scanner, string file) {
		this.scanner = scanner;
        this.file = file;
		errors = new Errors();
	}
	public static List<string> UsedFiles = new List<string>();
	
	bool peekCompare(params int[] values)
	{
		Token t = la;
		foreach(int i in values)
		{
			if(i != -1 && t.kind != i)
			{
				scanner.ResetPeek();
				return false;
			}
            if (t.next == null)
                t = scanner.Peek();
            else
                t = t.next;
		}
        scanner.ResetPeek();
		return true;
	}
	bool peekString(int count, params string[] values)
	{
		Token t = la;
        for(; count > 0; count --)
            t = scanner.Peek();
		foreach(var it in values)
		{
			if(t.val == it)
			{
				scanner.ResetPeek();
				return true;
			}
		}
        scanner.ResetPeek();
		return false;
	}
	
	
	void SynErr (int n) {
		if (errDist >= minErrDist) errors.SynErr(la.line, la.col, n);
		errDist = 0;
	}
	void Warning (string msg) {
		errors.Warning(la.line, la.col, msg);
	}

	public void SemErr (string msg) {
		if (errDist >= minErrDist) errors.SemErr(t.line, t.col, msg);
		errDist = 0;
	}
	
	void Get () {
		for (;;) {
			t = la;
			la = scanner.Scan();
			if (la.kind <= maxT) { ++errDist; break; }

			la = t;
		}
	}
	
	void Expect (int n) {
		if (la.kind==n) Get(); else { SynErr(n); }
	}
	
	bool StartOf (int s) {
		return set[s, la.kind];
	}
	
	void ExpectWeak (int n, int follow) {
		if (la.kind == n) Get();
		else {
			SynErr(n);
			while (!StartOf(follow)) Get();
		}
	}


	bool WeakSeparator(int n, int syFol, int repFol) {
		int kind = la.kind;
		if (kind == n) {Get(); return true;}
		else if (StartOf(repFol)) {return false;}
		else {
			SynErr(n);
			while (!(set[syFol, kind] || set[repFol, kind] || set[0, kind])) {
				Get();
				kind = la.kind;
			}
			return StartOf(syFol);
		}
	}

	
	void FNCARGLIST(pBaseLangObject obj) {
		pBaseLangObject blo;
		VarTypeObject vto;
		
		Expect(12);
		if (StartOf(1)) {
			VARTYPE(out vto, obj);
			NEWVARIABLE(out blo, obj, vto);
			obj.addChild(blo); 
			while (la.kind == 20) {
				Get();
				VARTYPE(out vto, obj);
				NEWVARIABLE(out blo, obj, vto);
				obj.addChild(blo); 
			}
		}
		Expect(13);
	}

	void VARTYPE(out VarTypeObject e, pBaseLangObject parent, bool identFlag = false) {
		e = null; 
		if (StartOf(2)) {
			switch (la.kind) {
			case 32: {
				Get();
				e = new VarTypeObject(VarType.Scalar); 
				break;
			}
			case 33: {
				Get();
				e = new VarTypeObject(VarType.Scalar); 
				break;
			}
			case 34: {
				Get();
				e = new VarTypeObject(VarType.Scalar); 
				break;
			}
			case 35: {
				Get();
				e = new VarTypeObject(VarType.Scalar); 
				break;
			}
			case 36: {
				Get();
				e = new VarTypeObject(VarType.Bool); 
				break;
			}
			case 37: {
				Get();
				e = new VarTypeObject(VarType.Bool); 
				break;
			}
			case 38: {
				Get();
				e = new VarTypeObject(VarType.ScalarArray); 
				break;
			}
			case 39: {
				Get();
				e = new VarTypeObject(VarType.ScalarArray); 
				break;
			}
			case 40: {
				Get();
				e = new VarTypeObject(VarType.ScalarArray); 
				break;
			}
			case 41: {
				Get();
				e = new VarTypeObject(VarType.ScalarArray); 
				break;
			}
			case 42: {
				Get();
				e = new VarTypeObject(VarType.BoolArray); 
				break;
			}
			case 43: {
				Get();
				e = new VarTypeObject(VarType.BoolArray); 
				break;
			}
			}
		} else if (la.kind == 3 || la.kind == 19 || la.kind == 21) {
			pBaseLangObject blo; 
			IDENTACCESS(out blo, parent, identFlag);
			e = new VarTypeObject((Ident)blo); 
			if (la.kind == 21) {
				Template te; 
				TEMPLATE(out te, ((Ident)blo).LastIdent);
				e.TemplateObject = te; 
			}
		} else SynErr(93);
	}

	void NEWVARIABLE(out pBaseLangObject outObj, pBaseLangObject parent, VarTypeObject vto, Encapsulation e = Encapsulation.NA) {
		var obj = new Variable(parent, la.line, la.col, this.file);
		obj.encapsulation = e;
		outObj = obj;
		pBaseLangObject blo;
		obj.varType = vto;
		
		IDENT(out blo, outObj);
		obj.Name = (Ident)blo; 
		if (la.kind == 9 || la.kind == 10 || la.kind == 11) {
			BODY_ASSIGNMENT(out blo, outObj);
			obj.addChild(blo); 
		}
	}

	void SPECIAL_NEWVARIABLEFUNCTION(out pBaseLangObject outObj, pBaseLangObject parent, Encapsulation e, bool fVFncOnly = false, bool isInline = false) {
		outObj = null;
		pBaseLangObject blo;
		bool isAsync = false;
		bool isVirtual = false;
		VarTypeObject vto = null;
		
		if (StartOf(1)) {
			VARTYPE(out vto, parent);
			if (peekCompare(_T_IDENT, _T_ROUNDBRACKETOPEN)) {
				FUNCTION(out blo, parent, e, vto, false, false, false, isInline);
				outObj = blo;
				if(!((Function)blo).IsVirtual && fVFncOnly)
				{
				SemErr("Non-Virtual function on VirtualOnly class");
				} 
				
			} else if (la.kind == 3) {
				NEWVARIABLE(out blo, parent, vto, e);
				outObj = blo; 
				TERMINATOR();
			} else SynErr(94);
		} else if (la.kind == 25) {
			Get();
			vto = new VarTypeObject(VarType.Void); 
			FUNCTION(out blo, parent, e, vto, false, false, false, isInline);
			outObj = blo;
			if(!((Function)blo).IsVirtual && fVFncOnly)
			{
			SemErr("Non-Virtual function on VirtualOnly class");
			}
			
		} else if (la.kind == 26) {
			Get();
			isAsync = true; 
			if (la.kind == 27) {
				if(isInline)
				{
				SemErr("virtual functions can't be inline");
				}
				
				Get();
				isVirtual = true; 
			}
			if (StartOf(1)) {
				VARTYPE(out vto, parent);
			} else if (la.kind == 25) {
				Get();
				vto = new VarTypeObject(VarType.Void); 
			} else SynErr(95);
			FUNCTION(out blo, parent, e, vto, isAsync, isVirtual, false, isInline);
			outObj = blo;
			if(!((Function)blo).IsVirtual && fVFncOnly)
			{
			SemErr("Non-Virtual function on VirtualOnly class");
			}
			
		} else if (la.kind == 27) {
			if(isInline)
			{
			SemErr("virtual functions can't be inline");
			}
			
			Get();
			isVirtual = true; 
			if (StartOf(1)) {
				VARTYPE(out vto, parent);
			} else if (la.kind == 25) {
				Get();
				vto = new VarTypeObject(VarType.Void); 
			} else SynErr(96);
			FUNCTION(out blo, parent, e, vto, isAsync, isVirtual);
			outObj = blo;
			if(!((Function)blo).IsVirtual && fVFncOnly)
			{
			SemErr("Non-Virtual function on VirtualOnly class");
			}
			
		} else if (la.kind == 28) {
			if(isInline)
			{
			SemErr("external functions can't be inline");
			}
			
			Get();
			if (la.kind == 26) {
				Get();
				isAsync = true; 
			}
			if (StartOf(1)) {
				VARTYPE(out vto, parent);
			} else if (la.kind == 25) {
				Get();
				vto = new VarTypeObject(VarType.Void); 
			} else SynErr(97);
			FUNCTION(out blo, parent, e, vto, isAsync, false, true);
			outObj = blo; 
			TERMINATOR();
		} else SynErr(98);
	}

	void FUNCTION(out pBaseLangObject outObj, pBaseLangObject parent, Encapsulation e, VarTypeObject vto, bool isAsync = false, bool isVirtual = false, bool isExternal = false, bool isInline = false) {
		var obj = new Function(parent); outObj = obj;
		obj.encapsulation = e;
		obj.IsAsync = isAsync;
		obj.IsVirtual = isVirtual;
		obj.varType = vto;
		obj.IsExternal = isExternal;
		obj.IsInline = isInline;
		obj.IsThrowing = false;
		pBaseLangObject blo;
		if(isExternal && isVirtual) SemErr("External function is marked as virtual");
		if(e == Encapsulation.Static && isVirtual) SemErr("Static function is marked as virtual");
		
		IDENT(out blo, obj);
		obj.Name = (Ident)blo; 
		FNCARGLIST(obj);
		obj.markArgListEnd(); 
		if (la.kind == 68) {
			Get();
			obj.IsThrowing = true; 
		}
		if(!isExternal) { 
		Expect(16);
		while (StartOf(3)) {
			CODEINSTRUCTION(out blo, obj);
			obj.addChild(blo); 
		}
		Expect(17);
		} 
	}

	void TERMINATOR() {
		Expect(4);
		while (la.kind == 4) {
			Get();
		}
	}

	void TEMPLATE(out Template obj, pBaseLangObject parent) {
		obj = new Template(parent, t.line, t.col, this.file); VarTypeObject vto; 
		Expect(21);
		VARTYPE(out vto, obj);
		obj.vtoList.Add(vto); 
		while (la.kind == 20) {
			Get();
			VARTYPE(out vto, obj);
			obj.vtoList.Add(vto); 
		}
		Expect(22);
	}

	void IDENT(out pBaseLangObject outObj, pBaseLangObject parent) {
		Expect(3);
		outObj = new Ident(parent, t.val, t.line, t.col, this.file); 
	}

	void IDENTACCESS(out pBaseLangObject outObj, pBaseLangObject parent, bool allowBody = true) {
		pBaseLangObject blo; pBaseLangObject ident; outObj = null; bool isGlobalIdent = false; 
		if (la.kind == 21) {
			CAST(out outObj, parent);
		}
		if (la.kind == 19) {
			Get();
			isGlobalIdent = true; 
		}
		IDENT(out ident, (outObj == null ? parent : outObj));
		try{ ((Ident)ident).IsGlobalIdentifier = isGlobalIdent; } catch (Exception ex) { SemErr(ex.Message); } if(outObj == null) outObj = ident; else outObj.addChild(ident); 
		if(allowBody) { 
		if (la.kind == 12 || la.kind == 14) {
			if (la.kind == 12) {
				BODY_FUNCTIONCALL(out blo, ident);
				((Ident)ident).addChild(blo); 
			} else {
				BODY_ARRAYACCESS(out blo, ident);
				((Ident)ident).addChild(blo); 
			}
		}
		} 
		if (la.kind == 18 || la.kind == 19) {
			if (la.kind == 18) {
				Get();
				((Ident)ident).Access = Ident.AccessType.Instance; 
			} else {
				Get();
				((Ident)ident).Access = Ident.AccessType.Namespace; 
			}
			IDENTACCESS(out blo, ident, allowBody);
			((Ident)ident).addChild(blo); 
		}
	}

	void CAST(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new Cast(parent); outObj = obj; VarTypeObject vto; 
		Expect(21);
		VARTYPE(out vto, obj);
		obj.varType = vto; 
		Expect(22);
	}

	void BODY_FUNCTIONCALL(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new FunctionCall(parent); outObj = obj; pBaseLangObject blo; 
		Expect(12);
		if (StartOf(4)) {
			EXPRESSION(out blo, obj);
			obj.addChild(blo); 
			while (la.kind == 20) {
				Get();
				EXPRESSION(out blo, obj);
				obj.addChild(blo); 
			}
		}
		Expect(13);
	}

	void BODY_ARRAYACCESS(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new ArrayAccess(parent); outObj = obj; pBaseLangObject blo; 
		Expect(14);
		EXPRESSION(out blo, obj);
		obj.addChild(blo); 
		Expect(15);
	}

	void ENCAPSULATION(out Encapsulation e) {
		e = Encapsulation.NA; 
		if (la.kind == 29) {
			Get();
			e = Encapsulation.Public; 
		} else if (la.kind == 30) {
			Get();
			e = Encapsulation.Private; 
		} else if (la.kind == 31) {
			Get();
			e = Encapsulation.Protected; 
		} else SynErr(99);
	}

	void BOOLEAN(out bool flag) {
		flag = la.val == "true"; Get(); return; /*fix for weirdo coco bug ...*/ 
		if (la.kind == 44) {
			Get();
			flag = true; 
		} else if (la.kind == 45) {
			Get();
			flag = false; 
		} else SynErr(100);
	}

	void VALUE(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new Value(parent); outObj = obj; outObj = obj; bool flag; 
		if (la.kind == 2) {
			Get();
			obj.varType.varType = VarType.Object; obj.value = t.val; obj.varType.ident = new Ident(obj, "string", t.line, t.col, this.file); obj.varType.ident.IsGlobalIdentifier = true; 
		} else if (la.kind == 1) {
			Get();
			obj.varType.varType = VarType.Scalar; obj.value = t.val; 
		} else if (la.val == "true" || la.val == "false") {
			BOOLEAN(out flag);
			obj.varType.varType = VarType.Bool; obj.value = (flag ? "true" : "false"); 
		} else if (la.kind == 44 || la.kind == 45) {
			BOOLEAN(out flag);
			
		} else SynErr(101);
	}

	void EXPRESSION(out pBaseLangObject outObj, pBaseLangObject parent, bool negate = false, bool hasBrackets = false) {
		var obj = new Expression(parent, negate, hasBrackets, t.line, t.col, this.file); outObj = obj; pBaseLangObject blo; 
		EXPRESSION_HELPER(obj, out blo);
		int lastOpType = 3;
		var opList = new List<string>();
		var objList = new List<pBaseLangObject>();
		objList.Add(blo);
		List<Expression> previousExpressions = new List<Expression>();
		previousExpressions.Add(obj);
		if(!negate) {
		
		while (StartOf(5)) {
			string op = ""; int thisOpType = -1; 
			switch (la.kind) {
			case 5: {
				Get();
				op = t.val; thisOpType = 1; 
				break;
			}
			case 23: {
				Get();
				op = t.val; thisOpType = 1; 
				break;
			}
			case 21: {
				Get();
				op = t.val; thisOpType = 2; 
				break;
			}
			case 22: {
				Get();
				op = t.val; thisOpType = 2; 
				break;
			}
			case 6: {
				Get();
				op = t.val; thisOpType = 2; 
				break;
			}
			case 7: {
				Get();
				op = t.val; thisOpType = 3; 
				break;
			}
			}
			EXPRESSION_HELPER(obj, out blo);
			if(thisOpType != lastOpType)
			{
				if(thisOpType < lastOpType)
				{
					var expList = new Expression(previousExpressions.Last(), negate, hasBrackets, t.line, t.col, this.file);
					if (opList.Count > 0)
					{
						if (opList.Count > 1)
						{
							expList.expressionOperators.AddRange(opList.GetRange(0, opList.Count - 1));
						}
						previousExpressions.Last().expressionOperators.Add(opList[opList.Count - 1]);
					}
					previousExpressions.Last().expressionObjects.AddRange(objList.GetRange(0, objList.Count - 1));
					previousExpressions.Last().expressionObjects.Add(expList);
					previousExpressions.Add(expList);
					previousExpressions.Last().expressionObjects.Add(objList[objList.Count - 1]);
					opList.Clear();
					objList.Clear();
				}
				else
				{
					var expList = previousExpressions.Last();
					expList.expressionOperators.AddRange(opList);
					expList.expressionObjects.AddRange(objList);
					previousExpressions.RemoveAt(previousExpressions.Count - 1);
					opList.Clear();
					objList.Clear();
				}
			}
			opList.Add(op);
			objList.Add(blo);
			lastOpType = thisOpType;
			
		}
		}
		previousExpressions.Last().expressionOperators.AddRange(opList);
		previousExpressions.Last().expressionObjects.AddRange(objList);
		
	}

	void EXPRESSION_HELPER(Expression obj, out pBaseLangObject blo) {
		blo = null; 
		if (la.kind == 12) {
			Get();
			EXPRESSION(out blo, obj, false);
			Expect(13);
		} else if (la.kind == 46) {
			Get();
			EXPRESSION(out blo, obj, true);
		} else if (la.kind == 77) {
			OP_NEWINSTANCE(out blo, obj);
		} else if (la.val == "true" || la.val == "false" ) {
			VALUE(out blo, obj);
		} else if (StartOf(6)) {
			VALUE(out blo, obj);
		} else if (la.kind == 3 || la.kind == 19 || la.kind == 21) {
			IDENTACCESS(out blo, obj);
			if (la.kind == 83) {
				OP_INSTANCEOF(out blo, obj, blo);
			}
		} else if (la.kind == 90) {
			OP_SQFCALL(out blo, obj);
		} else if (la.kind == 72) {
			OP_NULL(out blo, obj);
		} else if (la.kind == 73) {
			OP_DEREF(out blo, obj);
		} else SynErr(102);
	}

	void OP_NEWINSTANCE(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new NewInstance(parent); outObj = obj; pBaseLangObject blo; pBaseLangObject blo2; 
		Expect(77);
		IDENTACCESS(out blo, obj, false);
		obj.Name = (Ident)blo; 
		if (la.kind == 21) {
			Template te; 
			TEMPLATE(out te, ((Ident)blo).LastIdent);
			obj.TemplateObject = te; 
		}
		BODY_FUNCTIONCALL(out blo2, ((Ident)blo).LastIdent);
		((Ident)blo).LastIdent.addChild(blo2); 
	}

	void OP_INSTANCEOF(out pBaseLangObject outObj, pBaseLangObject parent, pBaseLangObject identAccess) {
		var obj = new InstanceOf(parent); outObj = obj; pBaseLangObject blo; obj.LIdent = identAccess; identAccess.Parent = obj; 
		Expect(83);
		IDENTACCESS(out blo, obj);
		obj.RIdent = (Ident)blo; 
	}

	void OP_SQFCALL(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new SqfCall(parent); outObj = obj; pBaseLangObject blo; VarTypeObject vto; 
		Expect(90);
		if (la.kind == 12) {
			Get();
			if (StartOf(4)) {
				EXPRESSION(out blo, obj);
				obj.addChild(blo); 
			} else if (la.kind == 16) {
				OP_NEWARRAY(out blo, obj);
				obj.addChild(blo); 
			} else SynErr(103);
			while (la.kind == 20) {
				Get();
				if (StartOf(4)) {
					EXPRESSION(out blo, obj);
					obj.addChild(blo); 
				} else if (la.kind == 16) {
					OP_NEWARRAY(out blo, obj);
					obj.addChild(blo); 
				} else SynErr(104);
			}
			Expect(13);
		}
		IDENT(out blo, outObj);
		try{ obj.Name = (Ident)blo;} catch (Exception ex) { SemErr(ex.Message); } 
		if (la.kind == 12) {
			Get();
			obj.markEnd(); 
			if (StartOf(4)) {
				EXPRESSION(out blo, obj);
				obj.addChild(blo); 
			} else if (la.kind == 16) {
				OP_NEWARRAY(out blo, obj);
				obj.addChild(blo); 
			} else SynErr(105);
			while (la.kind == 20) {
				Get();
				if (StartOf(4)) {
					EXPRESSION(out blo, obj);
					obj.addChild(blo); 
				} else if (la.kind == 16) {
					OP_NEWARRAY(out blo, obj);
					obj.addChild(blo); 
				} else SynErr(106);
			}
			Expect(13);
		}
		if (la.kind == 91) {
			obj.HasAs = true; 
			Get();
			VARTYPE(out vto, obj);
			obj.ReferencedType = vto; 
		}
	}

	void OP_NULL(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new Null(parent, t.line, t.col, this.file); outObj = obj; 
		Expect(72);
	}

	void OP_DEREF(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new Deref(parent, t.line, t.col, this.file); outObj = obj; pBaseLangObject blo; 
		Expect(73);
		IDENTACCESS(out blo, obj, false);
		obj.addChild((Ident)blo); 
	}

	void OOS() {
		if(this.BaseObject == null) throw new Exception("BaseObject was never set"); var obj = this.BaseObject; pBaseLangObject blo; 
		if (la.kind == 48) {
			OP_USING();
			while (la.kind == 48) {
				OP_USING();
			}
		}
		while (StartOf(7)) {
			switch (la.kind) {
			case 50: {
				NAMESPACE(out blo, obj);
				obj.addChild(blo); 
				break;
			}
			case 63: {
				CLASS(out blo, obj);
				obj.addChild(blo); 
				break;
			}
			case 51: {
				NATIVECLASS(out blo, obj);
				obj.addChild(blo); 
				break;
			}
			case 49: {
				ENUM(out blo, obj);
				obj.addChild(blo); 
				break;
			}
			case 67: {
				INTERFACE(out blo, obj);
				obj.addChild(blo); 
				break;
			}
			case 47: {
				Get();
				if (StartOf(8)) {
					SPECIAL_NEWVARIABLEFUNCTION(out blo, obj, Encapsulation.Static);
					obj.addChild(blo); 
				} else if (la.kind == 59) {
					NATIVEFUNCTION(out blo, obj);
					obj.addChild(blo); 
				} else SynErr(107);
				break;
			}
			}
		}
	}

	void OP_USING() {
		List<string> identList = new List<string>(); 
		Expect(48);
		if (la.kind == 19) {
			Get();
		}
		Expect(3);
		identList.Add(t.val); 
		while (la.kind == 19) {
			Get();
			Expect(3);
			identList.Add(t.val); 
		}
		if (errDist >= minErrDist)
		{
		
		bool flag = false;
		string currentFile = "";
		foreach(string lookupPath in new string[] {Wrapper.Compiler.ProjectFile.SrcFolder, Wrapper.Compiler.stdLibPath})
		{
			if(flag)
				break;
			currentFile = lookupPath;
			foreach (var it in identList)
			{
				string tmp = currentFile + it;
				if (Directory.Exists(tmp))
				{
					currentFile += it + '\\';
				}
				else if (Directory.EnumerateFiles(currentFile).Any(file =>
				{
					int index = file.LastIndexOf('\\');
					string tmpFile = file;
					file = file.Substring(index + 1);
					if (file.StartsWith(it))
					{
						index = file.IndexOf('.');
						if (index >= 0)
						{
							file = file.Substring(0, index);
						}
						if (file == it)
						{
							currentFile = tmpFile;
							return true;
						}
						else
						{
							return false;
						}
					}
					else
					{
						return false;
					}
				}))
				{
					if (identList.Last() == it)
					{
						flag = true;
						break;
					}
				}
			}
		}
		if (flag)
		{
			if (!UsedFiles.Contains(currentFile))
			{
				UsedFiles.Add(currentFile);
				var ppFiles = new List<Compiler.PostProcessFile>();
				Wrapper.Compiler.Instance.preprocessFile(new List<Wrapper.Compiler.preprocessFile_IfDefModes>(), currentFile, currentFile, ppFiles);
				Scanner scanner = new Scanner(ppFiles.First().FileStream);
				Base baseObject = new Base();
				Parser p = new Parser(scanner, currentFile);
				p.BaseObject = this.BaseObject;
				p.Parse();
				if (p.errors.count > 0)
				{
					this.errors.count += p.errors.count;
					Logger.Instance.log(Logger.LogLevel.ERROR, "In file '" + currentFile + "'");
				}
			}
		}
		else
		{
			string errString = "";
			foreach(var it in identList)
				errString += "::" + it;
			SemErr("Invalid Operation, path could not be dereferenced: " + errString);
		}
		}
		
		if (la.kind == 4) {
			TERMINATOR();
		}
	}

	void NAMESPACE(out pBaseLangObject outObj, pBaseLangObject parent) {
		var obj = new Namespace(parent); outObj = obj; pBaseLangObject blo; 
		Expect(50);
		IDENT(out blo, obj);
		obj.Name = (Ident)blo;
		
		var nsList = parent.getAllChildrenOf<Namespace>();
		foreach(var it in nsList)
		{
			if(it.Name.OriginalValue == ((Ident)blo).OriginalValue)
			{
				obj = it;
				outObj = obj;
				break;
			}
		}
		
		Expect(16);
		while (StartOf(7)) {
			switch (la.kind) {
			case 50: {
				NAMESPACE(out blo, obj);
				obj.addChild(blo); 
				break;
			}
			case 63: {
				CLASS(out blo, obj);
				obj.addChild(blo); 
				break;
			}
			case 49: {
				ENUM(out blo, obj);
				obj.addChild(blo); 
				break;
			}
			case 51: {
				NATIVECLASS(out blo, obj);
				obj.addChild(blo); 
				break;
			}
			case 67: {
				INTERFACE(out blo, obj);
				obj.addChild(blo); 
				break;
			}
			case 47: {
				Get();
				if (StartOf(8)) {
					SPECIAL_NEWVARIABLEFUNCTION(out blo, obj, Encapsulation.Static);
					obj.addChild(blo); 
				} else if (la.kind == 59) {
					NATIVEFUNCTION(out blo, obj);
					obj.addChild(blo); 
				} else SynErr(108);
				break;
			}
			}
		}
		Expect(17);
	}
